--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 02:05:03 2018</p>
+         Last Run: Thu Jul 19 03:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>50</td>
-                        <td>55</td>
+                        <td>46</td>
+                        <td>56</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
@@ -46,11 +46,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>34</td>
-                        <td>55</td>
-                        <td>2</td>
-                        <td>11</td>
+                        <td>56</td>
+                        <td>1</td>
+                        <td>10</td>
                         <td>SE</td>
-                        <td>74</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -58,9 +58,9 @@
                         <td>21</td>
                         <td>21</td>
                         <td>24</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>ESE</td>
                         <td>60</td>
                      </tr>
@@ -69,7 +69,7 @@
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>8</td>
+                        <td>13</td>
                         <td>55</td>
                         <td>0</td>
                         <td>13</td>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "50",
+                 "46",
                  "34",
                  "24",
-                 "8"
+                 "13"
                ]
              },
              {
@@ -197,9 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "55",
-                 "53",
+                 "56",
+                 "56",
+                 "54",
                  "55"
                ]
              },
@@ -209,7 +209,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "83",
-                 "74",
+                 "76",
                  "60",
                  "57"
                ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 02:05:03 2018</p>
+         Last Run: Thu Jul 19 03:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -257,7 +257,7 @@
                         <td>3</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -269,7 +269,7 @@
                         <td>4</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>8</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -277,11 +277,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>1</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>6</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -289,11 +289,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>28</td>
                         <td>7</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>36</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -301,11 +301,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>26</td>
+                        <td>27</td>
                         <td>7</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -435,9 +435,9 @@
                "data":[
                  "42",
                  "36",
-                 "30",
-                 "27",
-                 "26"
+                 "31",
+                 "28",
+                 "27"
                ]
              },
              {
@@ -445,11 +445,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
-                 "8",
-                 "8",
-                 "36",
-                 "40"
+                 "7",
+                 "10",
+                 "10",
+                 "38",
+                 "41"
                ]
              }
            ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 02:05:03 2018</p>
+         Last Run: Thu Jul 19 03:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -507,7 +507,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -515,11 +515,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>3</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -639,7 +639,7 @@
                "data":[
                  "36",
                  "41",
-                 "48"
+                 "49"
                ]
              },
              {
@@ -648,8 +648,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "14",
-                 "13",
-                 "13"
+                 "14",
+                 "14"
                ]
              }
            ]
@@ -666,7 +666,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 02:05:03 2018</p>
+         Last Run: Thu Jul 19 03:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -695,7 +695,7 @@
                         <td>2</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>45</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -707,7 +707,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>42</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -719,7 +719,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>37</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -731,7 +731,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>31</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -742,7 +742,7 @@
                         <td>54</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
+                        <td>ENE</td>
                         <td>29</td>
                      </tr>
                   </tbody>
@@ -883,10 +883,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
-                 "42",
-                 "37",
-                 "31",
+                 "47",
+                 "44",
+                 "38",
+                 "33",
                  "29"
                ]
              }
