--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 03:05:21 2018</p>
+         Last Run: Thu Jul 19 04:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,48 +33,48 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>56</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>83</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>34</td>
-                        <td>56</td>
-                        <td>1</td>
+                        <td>41</td>
+                        <td>55</td>
+                        <td>2</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>76</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>24</td>
-                        <td>54</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>35</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>60</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>13</td>
-                        <td>55</td>
+                        <td>Mostly Cloudy</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>14</td>
+                        <td>54</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>57</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,8 +121,8 @@
                "data":[
                  "21",
                  "21",
-                 "21",
-                 "21"
+                 "22",
+                 "22"
                ]
              },
              {
@@ -133,8 +133,8 @@
                "data":[
                  "21",
                  "21",
-                 "21",
-                 "21"
+                 "22",
+                 "22"
                ]
              }
            ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "46",
-                 "34",
-                 "24",
-                 "13"
+                 "47",
+                 "41",
+                 "35",
+                 "14"
                ]
              },
              {
@@ -198,9 +198,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "56",
-                 "54",
-                 "55"
+                 "55",
+                 "53",
+                 "54"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
-                 "76",
-                 "60",
-                 "57"
+                 "84",
+                 "75",
+                 "63",
+                 "65"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 03:05:21 2018</p>
+         Last Run: Thu Jul 19 04:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,11 +253,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>44</td>
                         <td>3</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -265,23 +265,23 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>4</td>
-                        <td>11</td>
-                        <td>WSW</td>
                         <td>10</td>
+                        <td>W</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>1</td>
-                        <td>31</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>2</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -289,9 +289,9 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>7</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>38</td>
                      </tr>
@@ -303,9 +303,9 @@
                         <td>15</td>
                         <td>27</td>
                         <td>7</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>41</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -353,7 +353,7 @@
                "data":[
                  "17",
                  "18",
-                 "20",
+                 "19",
                  "20",
                  "21"
                ]
@@ -366,7 +366,7 @@
                "data":[
                  "17",
                  "18",
-                 "20",
+                 "19",
                  "20",
                  "21"
                ]
@@ -423,7 +423,7 @@
                "data":[
                  "0",
                  "0",
-                 "1",
+                 "2",
                  "15",
                  "15"
                ]
@@ -433,10 +433,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
-                 "36",
-                 "31",
-                 "28",
+                 "44",
+                 "37",
+                 "32",
+                 "29",
                  "27"
                ]
              },
@@ -445,11 +445,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "6",
                  "7",
-                 "10",
-                 "10",
+                 "8",
                  "38",
-                 "41"
+                 "42"
                ]
              }
            ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 03:05:21 2018</p>
+         Last Run: Thu Jul 19 04:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -507,7 +507,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>14</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -515,11 +515,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>3</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>14</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -639,7 +639,7 @@
                "data":[
                  "36",
                  "41",
-                 "49"
+                 "48"
                ]
              },
              {
@@ -648,8 +648,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "14",
-                 "14",
-                 "14"
+                 "13",
+                 "13"
                ]
              }
            ]
@@ -666,7 +666,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 03:05:21 2018</p>
+         Last Run: Thu Jul 19 04:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -690,12 +690,12 @@
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>31</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>47</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -705,17 +705,17 @@
                         <td>4</td>
                         <td>34</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
-                        <td>44</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>5</td>
-                        <td>39</td>
+                        <td>4</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
@@ -727,11 +727,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>9</td>
-                        <td>46</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>33</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -742,7 +742,7 @@
                         <td>54</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>ENE</td>
+                        <td>E</td>
                         <td>29</td>
                      </tr>
                   </tbody>
@@ -859,9 +859,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "3",
                  "4",
                  "4",
-                 "5",
                  "9",
                  "10"
                ]
@@ -873,8 +873,8 @@
                "data":[
                  "31",
                  "34",
-                 "39",
-                 "46",
+                 "38",
+                 "45",
                  "54"
                ]
              },
@@ -883,10 +883,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "44",
+                 "46",
+                 "43",
                  "38",
-                 "33",
+                 "32",
                  "29"
                ]
              }
