--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 10:05:05 2018</p>
+         Last Run: Thu Jul 19 11:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>40</td>
-                        <td>53</td>
+                        <td>55</td>
+                        <td>54</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>86</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Overcast</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>19</td>
-                        <td>53</td>
+                        <td>Mostly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>20</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>83</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>71</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -120,7 +120,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "22",
-                 "22",
+                 "21",
                  "21",
                  "21"
                ]
@@ -132,7 +132,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "22",
-                 "22",
+                 "21",
                  "21",
                  "21"
                ]
@@ -186,8 +186,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "40",
-                 "19",
+                 "55",
+                 "20",
                  "15",
                  "8"
                ]
@@ -197,8 +197,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "53",
+                 "54",
+                 "54",
                  "53",
                  "55"
                ]
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "83",
-                 "71",
-                 "50"
+                 "87",
+                 "79",
+                 "70",
+                 "49"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 10:05:05 2018</p>
+         Last Run: Thu Jul 19 11:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 10:05:05 2018</p>
+         Last Run: Thu Jul 19 11:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -507,14 +507,14 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>18</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>46</td>
                         <td>0</td>
                         <td>13</td>
@@ -629,7 +629,7 @@
                "data":[
                  "0",
                  "0",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -648,7 +648,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "15",
-                 "18",
+                 "19",
                  "22"
                ]
              }
@@ -666,7 +666,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 10:05:05 2018</p>
+         Last Run: Thu Jul 19 11:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -695,7 +695,7 @@
                         <td>2</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -719,7 +719,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>35</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -731,7 +731,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>30</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -883,10 +883,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
+                 "46",
                  "41",
-                 "35",
-                 "30",
+                 "36",
+                 "31",
                  "25"
                ]
              }
